fix: 완전탐색 subsets